--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Open Graph (for Facebook, Discord, etc) -->
+    <meta property="og:title" content="Muhammad Atiq – Portfolio" />
+    <meta property="og:description" content="Software Engineer | Web3 | Security" />
+    <meta property="og:image" content="https://maybeatiq.dev/preview.png" />
+    <meta property="og:url" content="https://maybeatiq.dev" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Muhammad Atiq – Portfolio" />
+    <meta name="twitter:description" content="Software Engineer | Web3 | Security" />
+    <meta name="twitter:image" content="https://maybeatiq.dev/preview.png" />
+    <meta name="twitter:url" content="https://maybeatiq.dev" />
+    <meta name="twitter:site" content="@maybeatiq" />
+    
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
