--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- Open Graph (for Facebook, Discord, etc) -->
     <meta property="og:title" content="Muhammad Atiq – Portfolio" />
-    <meta property="og:description" content="Software Engineer | Web3 | Security" />
+    <meta property="og:description" content="Software Engineer | Security" />
     <meta property="og:image" content="https://maybeatiq.dev/preview.png" />
     <meta property="og:url" content="https://maybeatiq.dev" />
     <meta property="og:type" content="website" />
@@ -12,7 +12,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Muhammad Atiq – Portfolio" />
-    <meta name="twitter:description" content="Software Engineer | Web3 | Security" />
+    <meta name="twitter:description" content="Software Engineer | Security" />
     <meta name="twitter:image" content="https://maybeatiq.dev/preview.png" />
     <meta name="twitter:url" content="https://maybeatiq.dev" />
     <meta name="twitter:site" content="@maybeatiq" />
